all the server side things work

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,3 +4,18 @@ block content
   h1= title
   p Welcome to #{title}
   p Hi! You have been logged in as #{username}.
+
+  if (loginStatus == "true")
+    form(action="/tweets/"+username , method='post', id="tweetform")
+      h3 Type your tweet!
+      input(type="text", name='message', id="message")
+      button(type='submit')
+        | Submit  
+
+  if (allTweets)
+    ul
+    each tweet in allTweets
+      li #{tweet.author} at #{tweet.time} : #{tweet.message}
+
+  //- include _twits
+
