--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,4 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    a(href="/") Home || 
+    a(href="/users/new") Login || 
+    a(href="/tweets/Panda") ohai Panda||  
     block content
