home page tweet stream works!

--- a/views/_twits.jade
+++ b/views/_twits.jade
@@ -1,3 +1,1 @@
-each twit, i in twits
-  div #{twit._author.name} made a tweet at time = #{twit.time}:
-    p #{twit.message}
+li #{desiredTweet.author} at #{desiredTweet.time} : #{desiredTweet.message} 
