--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='http://code.jquery.com/jquery.js')
+    script(src='/javascripts/tcAjax.js')
   body
     a(href="/") Home || 
     a(href="/users/new") Login || 
