playing with css :3

--- a/views/_twits.jade
+++ b/views/_twits.jade
@@ -1,1 +1,3 @@
-li #{desiredTweet.author} at #{desiredTweet.time} : #{desiredTweet.message} 
+div(class="tweet") 
+  h3(class="tweetauthor") #{desiredTweet.author} at #{desiredTweet.time} : 
+    p(class="tweetmessage") #{desiredTweet.message} 
