--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,71 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #61A5CC;
+  text-align: center;
 }
 
-a {
-  color: #00B7FF;
+.toparea {
+  text-align: center;
+}
+
+#tweetform {
+  border: 4px solid black;
+  border-radius: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px; 
+  padding-top: 10px;
+  background-color: #A5A5A5;
+  margin-left: 15px;
+  display: inline-block;
+  width: 300px;
+  margin-top: 15px;
+}
+
+#compose {
+  width: 100px;
+  text-align: center;
+  overflow: auto;
+  display: inline-block;
+}
+
+#message {
+  width: 185px;
+  display: inline-block;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+.tweetButton {
+  margin-left: 225px;
+}
+
+
+
+.tweetstream {
+  border: 4px solid black;
+  border-radius: 10px;
+  text-align: center;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px; 
+  padding-top: 10px;
+  background-color: #A5A5A5;
+  vertical-align: top;
+  display: inline-block;
+  width: 500px;
+  margin-left: 10px;
+}
+
+.tweet{
+  padding-bottom:15px;
+}
+
+.tweetauthor{
+  text-align: left;
+}
+
+.tweetmessage{
+  text-align: left;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
